# amaca

./: .gitignore  README.md  SPEC.md  pyproject.toml
amaca/api/: app.py  auth.py  codes.py  deps.py  jobs.py  schemas.py  users.py
amaca/auth/: __init__.py  oauth.py  tokens.py  users.py
amaca/codes/: demo.py
amaca/core/: __init__.py  code.py  monitored.py  registry.py  resources.py  types.py
amaca/db/: __init__.py  database.py  models.py
amaca/workers/: runner.py
data-dev/: amaca.db-shm  amaca.db-wal
frontend/: .gitignore  README.md  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: FormField.svelte  GroupPlot.svelte  JobStatus.svelte  OutputView.svelte  PeriodicTable.svelte  ResultPlots.svelte  api.ts  auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/codes/[name]/: +page.svelte
frontend/src/routes/jobs/: +page.svelte
frontend/src/routes/jobs/[id]/: +page.svelte
frontend/src/routes/login/: +page.svelte
scripts/: dev.sh  setup.sh
tests/: conftest.py  test_adapter_contract.py  test_api_codes.py  test_api_jobs.py  test_api_tokens.py  test_api_users.py  test_auth_tokens.py  test_auth_users.py  test_db_models.py  test_demo.py  test_entry_points.py  test_monitored.py  test_resources.py  test_runner.py
